--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Traffic Sign Recognition</h1>
     <video id="video" width="640" height="480" autoplay></video>
     <canvas id="canvas" width="640" height="480"></canvas>
+    <button id="switch-camera">Switch Camera</button>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
     <script src="script.js"></script>
