--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Traffic Sign Recognition</h1>
+    <h1>Sy Sang</h1>
     <video id="video" width="640" height="480" autoplay></video>
     <button id="switch-camera">Switch Camera</button>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
