--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </button>
         <a class="navbar-brand center-text" href="#" id="navbarTitle" style="color: rgb(218, 79, 79)"><strong>SCAN to connect</strong></a>
         <div class="info-container">
+            <a href="https://git.pythaverse.space/quang.dinh/LeanbotDistributors/blob/master/Leanbot_Testing/Leanbot_Advanced/code/Leanbot_Advanced_test.ino">Leanbot code</a>
             <button id="infoButton"><i class="fas fa-info-circle"></i></button>
             <div class="info-content" id="infoContent">
                 <h6><strong>Leanbot BLE Control</strong></h6>
